--- a/web/assets/v2/less/page/course-manage.less
+++ b/web/assets/v2/less/page/course-manage.less
@@ -219,3 +219,21 @@
   padding: 15px 10px 5px 5px;
   cursor: pointer;
 }
+
+.dashboard-panel {
+  .course-dashboard-ul {
+    list-style-type: none;
+    li {
+      width: 33%;
+      float: left;
+      margin: 20px auto;
+      padding: 0 5px;
+      text-align: center;
+      .title {
+        font-size: 14px;
+        color: #333;
+        margin-top: 0;
+      }
+    }
+  }
+}
