--- a/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/do-test.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/do-test.html.twig
@@ -10,7 +10,7 @@
   {# {% if showTestpaperNavbar|default('on') == 'off' %} #}
     <form id='teacherCheckForm' autocomplete="off">
     {# {% endif %} #}
-    {% for type in types|default(paper.metas.question_type_seq) %}
+    {% for type in types|default(paper.metas.counts) %}
       {% if items[type] != [] %}
         <div class="panel panel-default testpaper-question-block" id="testpaper-questions-{{ type }}">
           <div class="panel-heading"><strong class="">{{dict('questionType')[type]}}</strong>
