--- a/src/WebBundle/Resources/views/TaskManage/modal.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/modal.html.twig
@@ -121,7 +121,7 @@
   </div>
 {% endblock %}
 {% block footer %}
-  <button id="course-tasks-prev" type="submit" class="btn btn-primary" disabled>{{ '上一步'|trans }}</button>
+  <button id="course-tasks-prev" type="submit" class="btn btn-default hidden " >{{ '上一步'|trans }}</button>
   <button id="course-tasks-next" type="submit" class="btn btn-primary">{{ '下一步'|trans }}</button>
-  <button id="course-tasks-submit" type="submit" class="btn btn-primary" disabled data-submiting-text="{{ '正在保存...'|trans }}">{{ '保存'|trans }}</button>
+  <button id="course-tasks-submit" type="submit" class="btn btn-info hidden"  data-submiting-text="{{ '正在保存...'|trans }}">{{ '保存'|trans }}</button>
 {% endblock %}
