--- a/src/WebBundle/Resources/views/VideoActivity/modal.html.twig
+++ b/src/WebBundle/Resources/views/VideoActivity/modal.html.twig
@@ -55,6 +55,7 @@
             {% endif %}
             data-process="{{ uploader_process(targetType) }}"
             >
+            <iframe id="upload-iframe" name="" scrolling="no" src="/course/1/task_fields/create?type=video" style="width:100%;border:none"></iframe>
           </div>  
         </div>
         <div class="tab-pane" id="video-chooser-disk-pane">
