--- a/src/Topxia/WebBundle/Resources/views/CourseLessonManage/index.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseLessonManage/index.html.twig
@@ -18,6 +18,10 @@
 				<button class="btn btn-info btn-sm" id="lesson-create-btn" data-toggle="modal" data-target="#modal" data-backdrop="static" data-keyboard="false" data-url="{{ path('course_manage_lesson_create_testpaper', {id:course.id}) }}"><i class="glyphicon glyphicon-plus"></i> {{'试卷'|trans}}</button>
 			{% endif %}
 
+			{% if course.type == 'normal' and setting('storage.upload_mode') == 'cloud' %}
+				<button class="btn btn-info btn-sm" id="batch-create-btn" data-toggle="modal" data-target="#modal" data-backdrop="static" data-keyboard="false" data-url="{{ path('course_manage_lesson_batch_create', {id:course.id, token:uploader_token('materiallib', app.user.id, 'private')}) }}"><i class="glyphicon glyphicon-plus"></i> {{ '批量添加课时'|trans }}</button>
+			{% endif %}
+
 			<div class="btn-group">
 			  <button type="button" class="btn btn-sm btn-success dropdown-toggle" data-toggle="dropdown">
 			    <i class="glyphicon glyphicon-plus"></i>{{ setting('default.chapter_name')|default('章'|trans) }}/{{ setting('default.part_name')|default('节'|trans) }} <span class="caret"></span>
