--- a/src/Classroom/ClassroomBundle/Resources/views/ClassroomAdmin/set.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/ClassroomAdmin/set.html.twig
@@ -34,12 +34,20 @@
     </div>
 
     <div class="row form-group">
+      <div class="col-md-2 control-label">
+        <label >{{'课程列表页默认排序'|trans}}</label>
+      </div>
+      <div class="controls col-md-7 radios">
+        {{ radios('explore_default_orderBy', {latest:'最新'|trans, studentNum:'最热'|trans,recommendedSeq:'推荐'|trans}, classroomSetting.explore_default_orderBy) }}
+      </div>
+    </div>
+
+    <div class="row form-group">
       <div class="col-md-2 control-label"></div>
       <div class="controls col-md-8">
         <button type="submit" class="btn btn-primary">{{'提交'|trans}}</button>  
       </div>
     </div>
-
     <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
   </form>
 {% endblock %}
