--- a/src/Classroom/ClassroomBundle/Resources/views/ClassroomAdmin/set.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/ClassroomAdmin/set.html.twig
@@ -35,7 +35,7 @@
 
     <div class="row form-group">
       <div class="col-md-2 control-label">
-        <label >{{'课程列表页默认排序'|trans}}</label>
+        <label >{{'班级列表页默认排序'|trans}}</label>
       </div>
       <div class="controls col-md-7 radios">
         {{ radios('explore_default_orderBy', {latest:'最新'|trans, studentNum:'最热'|trans,recommendedSeq:'推荐'|trans}, classroomSetting.explore_default_orderBy) }}
