--- a/src/Classroom/ClassroomBundle/Resources/views/ClassroomAdmin/set.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/ClassroomAdmin/set.html.twig
@@ -38,7 +38,7 @@
         <label >{{'班级列表页默认排序'|trans}}</label>
       </div>
       <div class="controls col-md-7 radios">
-        {{ radios('explore_default_orderBy', {latest:'最新'|trans, studentNum:'最热'|trans,recommendedSeq:'推荐'|trans}, classroomSetting.explore_default_orderBy) }}
+        {{ radios('explore_default_orderBy', {createdTime:'最新'|trans, studentNum:'最热'|trans,recommendedSeq:'推荐'|trans}, classroomSetting.explore_default_orderBy) }}
       </div>
     </div>
 
