--- a/src/WebBundle/Resources/views/VideoActivity/modal.html.twig
+++ b/src/WebBundle/Resources/views/VideoActivity/modal.html.twig
@@ -1,6 +1,5 @@
 {% extends 'WebBundle:Activity:activity-form-layout.html.twig' %}
 
-{#{% do script(['http://localhost:12345/sdk.js', 'web/activity-manage/video-activity-fields.js']) %}#}
 {% do script([ 'web/activity-manage/video-activity-fields.js']) %}
 {% block activity_content %}
   <div class="row form-group">
@@ -35,58 +34,8 @@
     <div class="col-xs-2 control-label">
       <label for="text-content-field" class="style1">{{ '视频'|trans }}</label>
     </div>
-    <div class="file-chooser-bar hidden">
-      <span data-role="placeholder"></span>
-      <button class="btn btn-link btn-sm" type="button" data-role="trigger"><i
-            class="glyphicon glyphicon-edit"></i> {{ '编辑'|trans }}</button>
-      <div class="alert alert-warning" data-role="waiting-tip"
-           style="display:none;">{{ '正在转换视频格式，转换需要一定的时间，期间将不能播放该视频。'|trans }}<br/>{{ '转换完成后将以站内消息通知您。'|trans }}</div>
-    </div>
-
-    <div class="col-xs-9 controls file-chooser-main">
-      <ul class="nav nav-pills" id="material">
-        <li role="presentation" class="active"><a href="#chooser-upload-pane">上传资料</a></li>
-        <li role="presentation"><a href="#chooser-disk-pane">从资料库中选择</a></li>
-        <li role="presentation"><a href="#chooser-course-file">从课程中选择文件</a></li>
-        <li role="presentation"><a href="#chooser-import-pane">导入网络视频</a></li>
-      </ul>
-      <div class="tab-content">
-        <div class="tab-pane active" id="chooser-upload-pane">
-          {% set targetType = 'courseactivity' %}
-          {% set token = uploader_token(targetType, courseId, 'private') %}
-          {% set storageSetting = setting('storage') %}
-          <div id="uploader-container"
-               data-accept="{{ uploader_accept(targetType, 'video')|json_encode }}"
-               data-init-url="{{ url('uploader_init_v2', {token: token}, true) }}"
-               data-finish-url="{{ url('uploader_finished_v2', {token: token}, true) }}"
-              {% if storageSetting.upload_mode == 'cloud' %}
-                data-uploader-mode="sdk"
-                data-accept="{{ uploader_accept(targetType, 'video')|json_encode }}"
-              {% else %}
-                data-uploader-mode="local"
-                data-accept="{{ uploader_accept(targetType, 'local_video')|json_encode }}"
-              {% endif %}
-               data-process="{{ uploader_process(targetType) }}"
-          >
-          </div>
-        </div>
-
-        <div class="tab-pane" id="chooser-disk-pane">
-          {% include 'WebBundle:Component:materiallib-choose.html.twig' %}
-        </div>
-        <div class="tab-pane" id="chooser-course-file">
-          {% include 'WebBundle:Component:course-file-choose.html.twig' %}
-        </div>
-        <div class="tab-pane" id="chooser-import-pane">
-          {% include 'WebBundle:Component:import-video.html.twig' %}
-          <input id="lesson-media-field" type="hidden" name="media" value="{#{{ field_value(lesson, 'media')|json_encode }}#}">
-        </div>
-      </div>
-    </div>
-    <input id="mediaId" class="form-control" type="hidden" name="mediaId" value={{ activity.mediaId|default(null) }}>
-    <input id="mediaType" class="form-control" type="hidden" name="mediaType"
-           value={{ activity.mediaType|default('video') }}>
-    <input id="media" class="form-control" type="hidden" name="media" value="">
+    {% set mediaType = 'video' %}
+    {% include 'WebBundle:Component:file-choose.html.twig' %}
   </div>
 {% endblock %}
 
