--- a/src/Topxia/WebBundle/Resources/views/bootstrap-modal-layout-webpack.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/bootstrap-modal-layout-webpack.html.twig
@@ -12,7 +12,7 @@
     {% if not hide_footer|default(false) %}
       <div class="modal-footer">{% block footer %}{% endblock %}</div>
     {% endif %}
-    {% include 'TopxiaWebBundle::js_loader.html.twig' %}
+    {% include 'TopxiaWebBundle::js_loader_async.html.twig' %}
   </div>
 </div>
 
