--- a/src/WebBundle/Resources/views/TaskManage/list.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/list.html.twig
@@ -19,7 +19,7 @@
 {% block title %}{{ '教学计划管理'|trans }} - {{ parent() }}{% endblock %}
 {% set use_webapck_loader = true %}
 
-{% do script(['libs/jquery-validation.js','web/task-manage/delete.js']) %}
+{% do script(['web/task-manage/delete.js']) %}
 
 {% block main %}
 
