--- a/src/Topxia/WebBundle/Resources/views/js_loader_async.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/js_loader_async.html.twig
@@ -9,21 +9,27 @@
   })
 
   var Loader = (function() {
+
     var load_cursor = 0;
     var load_queue;
+
     var loadFinished = function() {
       load_cursor ++;
       if (load_cursor < load_queue.length) {
         loadScript();
       }
     }
+
     function loadError (oError) {
-     
+      console.error("The script " + oError.target.src + " is not accessible.");
     }
+
+
     var loadScript = function() {
       var url = load_queue[load_cursor];
       var script = document.createElement('script');
       script.type = "text/javascript";
+
       if (script.readyState){  //IE
           script.onreadystatechange = function(){
               if (script.readyState == "loaded" ||
@@ -43,16 +49,17 @@
       script.src = url+'?'+'time='+Date.parse(new Date());
       document.body.appendChild(script);
     };
+
     var loadMultiScript = function(url_array) {
       load_cursor = 0;
       load_queue = url_array;
       loadScript();
     }
+
     return {
       load: loadMultiScript,
     };
-
-  })();  // end Loader
+  })();
 
   Loader.load(script_arry);  
 </script>
