--- a/src/Topxia/WebBundle/Resources/views/Course/learn.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/learn.html.twig
@@ -29,41 +29,51 @@
        data-starttime="{{ starttime|default('') }}"
        data-hide-media-lesson-learn-btn="{{ is_feature_enabled('hide_media_lesson_learn_btn') }}">
     <div class="dashboard-content">
-      <div class="dashboard-header">
       {% set classroom = data('GetClassroomByCourseId',{courseId:course.id}) %}
       {% if classroom %}
-        <a class="btn back-course-btn" href="{{ path('classroom_show', {id:classroom.id}) }}"><span class="glyphicon glyphicon-chevron-left"></span> {{ '返回班级'|trans }}</a>
+        <a class="btn btn-primary  nav-btn back-course-btn" href="{{ path('classroom_show', {id:classroom.id}) }}"><span
+              class="glyphicon glyphicon-chevron-left"></span> {{ '返回班级'|trans }}</a>
       {% else %}
-        <a class="btn back-course-btn" href="{{ path('course_show', {id:course.id}) }}"><span class="glyphicon glyphicon-chevron-left"></span></a>
+        <a class="btn btn-primary  nav-btn back-course-btn" href="{{ path('course_show', {id:course.id}) }}"><span
+              class="glyphicon glyphicon-chevron-left"></span> {{ '返回课程'|trans }}</a>
       {% endif %}
-      {% if not setting('course.custom_chapter_enabled')|default(true) %}
-        <span class="chapter-label">
-          <span data-role="custom-chapter-number">
-            {{'第'|trans}}{% if setting('default.chapter_name') %}{{ setting('default.chapter_name')|default('章'|trans) }}{% else %}{{'章'|trans}}{% endif %}
-          </span>
-        </span>
-      {% else %}
-        {{'第'|trans}}<span data-role="chapter-number"></span>{% if setting('default.chapter_name') %}{{ setting('default.chapter_name')|default('章'|trans) }}{% else %}{{'章'|trans}}{% endif %}</span>
-      {% endif %}
-        <span class="divider">&raquo;</span>
-        <span class="chapter-label">
-        {% if not setting('course.custom_chapter_enabled')|default(true) %}
-        <span data-role="custom-unit-number">{{'第'|trans}}{% if setting('default.part_name') %}{{ setting('default.part_name')|default('节'|trans) }}{% else %}{{'节'|trans}}{% endif %}</span></span>
-      {% else %}
-        {{'第'|trans}}<span data-role="unit-number"></span>{% if setting('default.part_name') %}{{ setting('default.part_name')|default('节') }}{% else %}{{'节'|trans}}{% endif %}</span>
-      {% endif %}
-        <span class="divider">&raquo;</span>
-        <span class="item-label">{% if  setting('course.custom_chapter_enabled')|default(true) %}{{ '课时'|trans }}<span data-role="lesson-number"></span>{% endif %}</span>
-        <span class="item-title" data-role="lesson-title">{{ '正在加载'|trans }}...</span>
-        <a class="help-link" href="javascript:;" data-container="body" data-toggle="popover" data-placement="top" data-content="满足以下条件">
-          <i class="es-icon es-icon-help mrm"></i>任务完成条件
-        </a>
+
+      <a class="btn btn-primary  nav-btn prev-lesson-btn" href="javascript:" data-role="prev-lesson"
+         data-placement="right" title="{{ '上一课时'|trans }}"><span class="glyphicon glyphicon-chevron-up"
+                                                                 title="{{ '上一课时'|trans }}"></span></a>
+      <a class="btn btn-primary nav-btn next-lesson-btn" href="javascript:" data-role="next-lesson"
+         data-placement="right" title="{{ '下一课时'|trans }}"><span class="glyphicon glyphicon-chevron-down"></span></a>
+
+      <div class="dashboard-header">
+        <div class="pull-left title-group">
+          <span class="chapter-label">
+            {% if not setting('course.custom_chapter_enabled')|default(true) %}
+            <span
+                data-role="custom-chapter-number">{{'第'|trans}}{% if setting('default.chapter_name') %}{{ setting('default.chapter_name')|default('章'|trans) }}{% else %}{{'章'|trans}}{% endif %}</span></span>
+          {% else %}
+            {{'第'|trans}}<span
+              data-role="chapter-number"></span>{% if setting('default.chapter_name') %}{{ setting('default.chapter_name')|default('章'|trans) }}{% else %}{{'章'|trans}}{% endif %}</span>
+          {% endif %}
+          <span class="divider">&raquo;</span>
+          <span class="chapter-label">
+            {% if not setting('course.custom_chapter_enabled')|default(true) %}
+            <span
+                data-role="custom-unit-number">{{'第'|trans}}{% if setting('default.part_name') %}{{ setting('default.part_name')|default('节'|trans) }}{% else %}{{'节'|trans}}{% endif %}</span></span>
+        {% else %}
+          {{'第'|trans}}<span
+            data-role="unit-number"></span>{% if setting('default.part_name') %}{{ setting('default.part_name')|default('节') }}{% else %}{{'节'|trans}}{% endif %}</span>
+          {% endif %}
+          <span class="divider">&raquo;</span>
+          <span class="item-label">{% if  setting('course.custom_chapter_enabled')|default(true) %}{{ '课时'|trans }}<span
+                data-role="lesson-number"></span>{% endif %}</span>
+          <span class="item-title" data-role="lesson-title">{{ '正在加载'|trans }}...</span>
+        </div>
       </div>
 
       <div class="dashboard-body">
         <div class="lesson-content" id="lesson-video-content" data-role="lesson-content" style="display:none;"
             {% if setting('storage.video_watermark') > 0 and setting('storage.video_watermark_image') %}
-              data-watermark="{{ filepath(setting('storage.video_watermark_image'), null) }}"
+              data-watermark="{{ filepath(setting('storage.video_watermark_image'), null, true) }}"
             {% endif %}
             {% if setting('storage.video_fingerprint') and app.user %}
               data-fingerprint="{{ finger_print() }}"
@@ -112,40 +122,35 @@
 
       </div>
 
-      {#<div class="dashboard-footer clearfix">
+      <div class="dashboard-footer clearfix">
         <div class="pull-right">
           <button class="btn btn-primary finish-btn" data-role="finish-lesson" style="display:none;"><span
                 class="glyphicon glyphicon-unchecked"></span> {{ '学过了'|trans }}</button>
         </div>
-      </div>#}
+      </div>
     </div>
 
-    <div class="toolbar" id="lesson-dashboard-toolbar">
-      <div class="toolbar-nav hidden" id="lesson-dashboard-toolbar-nav">
-        <div class="toolbar-nav-content">
-          <ul class="toolbar-nav-stacked" id="lesson-toolbar-primary"></ul>
-          <ul class="toolbar-nav-stacked">
-            <li class="es-qrcode toolbar-qrcode" data-url="{{ path('course_show',{id: course.id}) }}">
-              <a>
-              <i class="es-icon es-icon-qrcode"></i>
-                <br>              
-                {{ '扫一扫'|trans }}
-                <span class="qrcode-popover">
-                  <img src="" alt="">              
-                  {{ '扫二维码继续学习'|trans }}
+    <div class="toolbar toolbar-open" id="lesson-dashboard-toolbar">
+      <div class="toolbar-nav">
+
+        <ul class="toolbar-nav-stacked" id="lesson-toolbar-primary"></ul>
+        <ul class="list-unstyled">
+          <li class="es-qrcode toolbar-qrcode" data-url="{{ path('course_show',{id: course.id}) }}">
+            <i class="es-icon es-icon-qrcode"></i><br>
+            {{ '扫一扫'|trans }}
+            <span class="qrcode-popover">
+              <img src="" alt="">
+              {{ '扫二维码继续学习'|trans }}
               {{ '二维码时效为半小时'|trans }}
-                </span>
-              </a>
-            </li>
-          </ul>
-          {#<ul class="toolbar-nav-stacked" id="lesson-toolbar-secondary">
-            <li class="hide-pane" style="display:none;">
-              <a href="javascript:">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-              </a>
-            </li>
-          </ul>#}
-        </div>
+            </span>
+          </li>
+        </ul>
+        <ul class="toolbar-nav-stacked" id="lesson-toolbar-secondary">
+          <li class="hide-pane" style="display:none;">
+            <a href="javascript:"><span class="glyphicon glyphicon-chevron-right"></span></a>
+          </li>
+        </ul>
+
       </div>
       <div class="toolbar-pane-container">
       </div>
