--- a/src/Topxia/WebBundle/Resources/views/CourseLessonManage/batch-create-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseLessonManage/batch-create-modal.html.twig
@@ -220,10 +220,10 @@
     </div>
   </div>
 
-<script>app.load('uploader/batch-upload-modal')</script>
+<script>app.load('course-manage/lesson/batch-create-modal')</script>
 {% endblock %}
 {% block footer %}
     <button type="button" class="btn btn-link" data-dismiss="modal">{{'关闭'|trans}}</button>
-    <button type="button" class="btn btn-primary js-submit-btn">{{'批量添加'|trans}}</button>
+    <button type="button" class="btn btn-primary js-batch-create-lesson-btn" data-url="{{ path('course_manage_lesson_create_from_file', {id:courseId}) }}">{{'批量添加'|trans}}</button>
 {% endblock %}
 
