--- a/src/Topxia/AdminBundle/Resources/views/App/upgrades.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/App/upgrades.html.twig
@@ -6,8 +6,8 @@
 
 {% block main %}
 
-  <div class="alert alert-danger">
-    系统优化升级机制，升级过程中会出现短暂（2分钟内）的网站无法访问的情况，请自主协调升级时间
+  <div class="alert alert-warning">
+    你好，因为升级过程中会出现短暂（2分钟内）的网站无法访问的情况，请在学员访问少的时候进行系统升级。
   </div>
 
   <div class="panel">
