--- a/src/WebBundle/Resources/views/Component/Widget/choose-table.html.twig
+++ b/src/WebBundle/Resources/views/Component/Widget/choose-table.html.twig
@@ -14,6 +14,7 @@
         data-id="{{ file.id }}"
         data-name="{{ file.filename }}"
         data-status="{{ file.convertStatus }}"
+        data-source="self"
         data-length="{{ file.length }}"
     >
       <td >
