--- a/src/WebBundle/Resources/views/DiscussActivity/modal.html.twig
+++ b/src/WebBundle/Resources/views/DiscussActivity/modal.html.twig
@@ -2,19 +2,12 @@
 {% do script(['web/activity-manage/discuss-activity-fields.js']) %}
 
 {% block activity_content %}
-  <div class="row form-group">
-    <div class="col-md-2 control-label">
-      <label for="title">{{ '标题'|trans }}</label>
+  <div class="form-group">
+    <div class="col-xs-2 control-label">
+      <label for="content" class="style1">{{ '说明'|trans }}</label>
     </div>
-    <div class="col-md-9 controls">
-      <input id="title" class="form-control" type="text" name="title" value={{ activity.title|default('') }}></div>
-  </div>
-  <div class="row form-group">
-    <div class="col-md-2 control-label">
-      <label for="text-content-field" class="style1">{{ '说明'|trans }}</label>
-    </div>
-    <div class="col-md-9 controls">
-      <textarea class="form-control" id="text-content-field" name="content" rows="10" data-image-upload-url="{{ path('editor_upload', {token:upload_token('course')}) }}" data-flash-upload-url="{{ path('editor_upload', {token:upload_token('course', 'flash')}) }}" data-image-download-url="{{ path('editor_download', {token:upload_token('course')}) }}"
+    <div class="col-xs-9 controls">
+      <textarea class="form-control" id="content" name="content" rows="10" data-image-upload-url="{{ path('editor_upload', {token:upload_token('course')}) }}" data-flash-upload-url="{{ path('editor_upload', {token:upload_token('course', 'flash')}) }}" data-image-download-url="{{ path('editor_download', {token:upload_token('course')}) }}"
     >{{ activity.content|default('') }}</textarea>
     </div>
   </div>
@@ -22,11 +15,11 @@
 
 
 {% block activity_finish %}
-  <div class="row form-group">
-    <div class="col-md-2 control-label">
+  <div class="form-group">
+    <div class="col-xs-2 control-label">
       <label for="condition">{{ '完成条件'|trans }}</label>
     </div>
-    <div class="col-md-9 controls">
+    <div class="col-xs-9 controls">
       <span>发表或者回复一个话题</span>
       {#<input id="condition" class="form-control" type="text" name="condition" value={{ activity.title|default('') }}></div>#}
   </div>
