--- a/src/WebBundle/Resources/views/Component/Parts/import-video.html.twig
+++ b/src/WebBundle/Resources/views/Component/Parts/import-video.html.twig
@@ -6,7 +6,8 @@
   {% endif %}
   <div class="input-group">
     <input class="form-control" type="text" placeholder="{{ '支持优酷、土豆、腾讯、网易公开课的视频页面地址导入'|trans }}"
-           data-role="import-url">
+           data-role="import-url"
+           value="{{ activity.ext.mediaUri|default(null) }}">
     <span class="input-group-btn">
               <button type="button" class="btn btn-default js-video-import" data-role="import"
                       data-url="{{ path('course_manage_media_import', {id:courseId}) }}"
