--- a/src/WebBundle/Resources/views/Task/show.html.twig
+++ b/src/WebBundle/Resources/views/Task/show.html.twig
@@ -17,6 +17,8 @@
       任务1 引用外站（优酷、土豆、网易公开课）的视频示例
   </div>
   <div class="dashboard-content">
+    <iframe id="task-content-iframe" class="task-content-iframe" src="http://www.esdev.com/course/1/tasks" style="width:100%;height:100%;border:0px">
+    </iframe>
   </div>
   <div class="dashboard-toolbar">
     <ul class="dashboard-toolbar-nav">
