--- a/src/WebBundle/Resources/views/TaskManage/list-item.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/list-item.html.twig
@@ -1,8 +1,29 @@
-<li>
+{#<li class="task-item">
 	{{task.title}} 
 	<a class='delete-task' href="javascript:;" data-url="{{path('course_manage_task_delete', {id:task.id,courseId:task.courseId})}}">删除</a>
 
-	<a data-role='update-task' href="javascript:;" data-toggle="modal" data-target="#modal" data-url="{{path('course_manage_task_update', {id:task.id,courseId:task.courseId})}}">修改</a>
+	<a >修改</a>
 
 	<a href="{{path('course_task_show', {id:task.id,courseId:task.courseId})}}" target="_blank">进入学习</a>
+</li>#}
+
+<li class="task-manage-item clearfix">
+  <div class="item-line"></div>
+  <div class="item-content">
+    {{task.title}} 
+  </div>
+
+  <div class="item-actions">
+  <a class="btn btn-link" data-role='update-task' href="javascript:;" data-toggle="modal" data-target="#modal" data-url="{{path('course_manage_task_update', {id:task.id,courseId:task.courseId})}}"><i class="es-icon es-icon-edit"></i>编辑</a>
+  <a href="{{path('course_task_show', {id:task.id,courseId:task.courseId})}}" target="_blank"><i class="es-icon es-icon-removeredeye"></i>预览</a>
+    <span class="dropdown">
+      <a class="dropdown-toggle dropdown-more" id="dropdown-more" data-toggle="dropdown" href="#"><i class="es-icon es-icon-keyboardarrowdown"aria-haspopup="true" aria-expanded="false"></i>{{'更多'|trans}}</a>
+
+      <ul class="dropdown-menu pull-right dropdown-menu-more" role="menu" style="margin-top:12px;min-width:144px" aria-labelledby="dLabel" style="display:none;">
+        <li>
+          <a class='delete-task' href="javascript:;" data-url="{{path('course_manage_task_delete', {id:task.id,courseId:task.courseId})}}">删除</a>
+        </li>
+      </ul>
+    </span>
+  </div>
 </li>
