--- a/src/WebBundle/Resources/views/TaskManage/list.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/list.html.twig
@@ -19,10 +19,10 @@
 {% block title %}{{ '教学计划管理'|trans }} - {{ parent() }}{% endblock %}
 {% set use_webapck_loader = true %}
 
+{% do css(['web.css']) %}
 {% do script(['web/task-manage/delete.js']) %}
 
 {% block main %}
-
   <div class="panel panel-default panel-col lesson-manage-panel">
     <div class="panel-heading">
       <div class="pull-right">
@@ -60,14 +60,62 @@
           {% include 'TopxiaWebBundle:CourseLessonManage:list-item.html.twig' with {lesson: item, file: files[item.mediaId]|default(null)} %}
         {% endif %}
       {% endfor %}
+      </ul>
 
+      <!-- TODO  删除返回的课程数据，为任务加章节数据 -->
+      <ul class="task-manage-list">
+        <li class="task-manage-item task-manage-chapter clearfix">
+          <div class="item-content">
+            第<span class="number">1</span>章：11
+          </div>
+          <div class="item-actions">
+            <div class="btn-group">
+              <a class="btn btn-link dropdown-toggle"> <i class="es-icon es-icon-addcircle"></i>添加
+              </a>
+              <ul class="dropdown-menu" role="menu">
+                <li>
+                  <a href="javascript:;" id="chapter-create-btn"> <i class="glyphicon glyphicon-plus"></i>
+                    添加节
+                  </a>
+                </li>
+                <li>
+                  <a href="javascript:;" id="chapter-create-btn">
+                    <i class="glyphicon glyphicon-plus"></i>
+                    添加任务
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <a class="btn btn-link">
+              <i class="es-icon es-icon-edit"></i>编辑
+            </a>
+            <a class="btn btn-link delete-chapter-btn">
+              <i class="es-icon es-icon-delete"></i>删除
+            </a>
+          </div>
+        </li>
+        <li class="task-manage-item task-manage-unit clearfix">
+          <div class="item-content">
+            第<span class="number">1</span>节：111
+          </div>
+          <div class="item-actions">
+            <a class="btn btn-link">
+              <i class="es-icon es-icon-addcircle"></i>添加
+            </a>
+            <a class="btn btn-link">
+              <i class="es-icon es-icon-edit"></i>编辑
+            </a>
+            <a class="btn btn-link">
+              <i class="es-icon es-icon-delete"></i>删除
+            </a>
+          </div>
+        </li>
         {% for task in tasks %}
           {% include 'WebBundle:TaskManage:list-item.html.twig' with {task:task} %}
         {% endfor %}
-    </ul>
+      </ul>
     </div>
   </div>
-
 {% endblock %}
 
 
