--- a/src/WebBundle/Resources/views/TextActivity/modal.html.twig
+++ b/src/WebBundle/Resources/views/TextActivity/modal.html.twig
@@ -2,7 +2,7 @@
 {% do script(['web/activity-manage/text-activity-fields.js'], 300) %}
 
 {% block activity_content %}
-  <div class="row form-group">
+  <div class=" form-group">
     <div class="col-xs-2 control-label">
       <label for="text-content-field" class="style1">{{ '内容'|trans }}</label>
     </div>
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block activity_finish %}
-  <div class="row form-group">
+  <div class=" form-group">
     <div class="col-xs-2 control-label">
       <label for="condition-select">{{ '完成条件'|trans }}</label>
     </div>
@@ -25,7 +25,7 @@
       </select>
     </div>
   </div>
-  <div class="row form-group hidden" id="condition-group">
+  <div class=" form-group hidden" id="condition-group">
     <div class="col-xs-2 control-label">
       <label for="condition-detail">{{ '至少观看'|trans }}</label>
     </div>
