--- a/src/WebBundle/Resources/views/VideoActivity/modal.html.twig
+++ b/src/WebBundle/Resources/views/VideoActivity/modal.html.twig
@@ -11,10 +11,7 @@
     {#</div>#}
   {#</div>#}
   <div class="form-group">
-    <div class="col-xs-2 control-label">
-
-    </div>
-    <div class="col-xs-9">
+    <div class="col-xs-offset-2 col-xs-9">
       <input id="title" type="checkbox" name="free" value={{ activity.title|default('') }}>
       <label for="title">{{ '是否免费课时'|trans }}</label>
     </div>
