--- a/src/WebBundle/Resources/views/TaskManage/list.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/list.html.twig
@@ -52,7 +52,7 @@
       {{'教学计划管理'|trans}}
     </div>
     <div class="panel-body">
-      <ul class="lesson-list sortable-list js-period-list" id="course-item-list" data-sort-url="{{ path('course_manage_lesson_sort', {id:course.id}) }}">
+      {#<ul class="lesson-list sortable-list js-period-list" id="course-item-list" data-sort-url="{{ path('course_manage_lesson_sort', {id:course.id}) }}">
       {% for id, item in items %}
         {% if 'chapter' in id %}
           {% include 'TopxiaWebBundle:CourseChapterManage:list-item.html.twig' with {chapter: item} %}
@@ -60,53 +60,49 @@
           {% include 'TopxiaWebBundle:CourseLessonManage:list-item.html.twig' with {lesson: item, file: files[item.mediaId]|default(null)} %}
         {% endif %}
       {% endfor %}
-      </ul>
+      </ul>#}
 
       <!-- TODO  删除返回的课程数据，为任务加章节数据 -->
       <ul class="task-manage-list">
         <li class="task-manage-item task-manage-chapter clearfix">
           <div class="item-content">
-            第<span class="number">1</span>章：11
+            <i class="es-icon es-icon-yidong mrm"></i>第<span class="number">1</span>章：11
           </div>
           <div class="item-actions">
-            <div class="btn-group">
-              <a class="btn btn-link dropdown-toggle"> <i class="es-icon es-icon-addcircle"></i>添加
+            <span class="dropdown">
+              <a class="dropdown-toggle dropdown-more btn btn-gray" id="dropdown-more" data-toggle="dropdown" href="#"> <i class="es-icon es-icon-keyboardarrowdown mrs"aria-haspopup="true" aria-expanded="false"></i>
+                {{'更多'|trans}}
               </a>
-              <ul class="dropdown-menu" role="menu">
+              <ul class="dropdown-menu pull-right dropdown-menu-more" role="menu" style="margin-top:12px;min-width:144px" aria-labelledby="dLabel" style="display:none;">
                 <li>
-                  <a href="javascript:;" id="chapter-create-btn"> <i class="glyphicon glyphicon-plus"></i>
-                    添加节
-                  </a>
+                  <a>添加节</a>
                 </li>
                 <li>
-                  <a href="javascript:;" id="chapter-create-btn">
-                    <i class="glyphicon glyphicon-plus"></i>
-                    添加任务
-                  </a>
+                  <a>添加任务</a>
                 </li>
               </ul>
-            </div>
-            <a class="btn btn-link">
-              <i class="es-icon es-icon-edit"></i>编辑
+            </span>
+            <a class="btn btn-gray">
+              <i class="es-icon es-icon-edit mrs"></i>编辑
             </a>
-            <a class="btn btn-link delete-chapter-btn">
-              <i class="es-icon es-icon-delete"></i>删除
+            <a class="btn btn-gray delete-chapter-btn">
+              <i class="es-icon es-icon-delete mrs"></i>删除
             </a>
           </div>
         </li>
         <li class="task-manage-item task-manage-unit clearfix">
           <div class="item-content">
-            第<span class="number">1</span>节：111
+            <i class="es-icon es-icon-yidong mrm"></i>第<span class="number">1</span>节：111
           </div>
           <div class="item-actions">
-            <a class="btn btn-link">
-              <i class="es-icon es-icon-addcircle"></i>添加
+            <a class="btn btn-gray">
+              <i class="es-icon es-icon-addcircle mrs"></i>添加
             </a>
-            <a class="btn btn-link">
-              <i class="es-icon es-icon-edit"></i>编辑
+            <a class="btn btn-gray">
+              <i class="es-icon es-icon-edit mrs"></i>编辑
             </a>
-            <a class="btn btn-link">
-              <i class="es-icon es-icon-delete"></i>删除
+            <a class="btn btn-gray">
+              <i class="es-icon es-icon-delete mrs"></i>删除
             </a>
           </div>
         </li>
