--- a/web/assets/v2/less/component/es-step.less
+++ b/web/assets/v2/less/component/es-step.less
@@ -1,6 +1,6 @@
 .es-step {
   padding-left: 0;
-  margin-bottom: 30px;
+  margin-bottom: 35px;
   &.es-step-3 li {
     width: 33.33%;
   }
@@ -11,32 +11,32 @@
     float: left;
     padding: 15px;
     list-style-type: none;
-    border-bottom: 2px solid @gray-medium;
-    color: @gray-medium;
-    font-size: 16px;
+    border-bottom: 2px solid @gray-light;
+    color: @gray-light;
+    font-size: 14px;
     text-align: center;
     .number {
-      width: 23px;
-      height: 23px;
-      line-height: 21px;
+      width: 20px;
+      height: 20px;
+      line-height: 18px;
       display: inline-block;
       margin-right: 5px;
-      border: 1px solid @gray-medium;
-      background-color: @gray-medium;
+      border: 1px solid @gray-light;
+      background-color: @gray-light;
       color: #fff;
       .border-radius(50%);
     }
     &.done,
     &.doing {
-      border-color: @brand-primary;
+      border-color: @brand-success;
       .number {
         color: #fff;
-        background-color: @brand-primary;
-        border-color: @brand-primary;
+        background-color: @brand-success;
+        border-color: @brand-success;
       }
     }
     &.done {
-      color: @brand-primary;
+      color: @brand-success;
     }
     &.doing {
       color: @gray-dark;
