--- a/src/WebBundle/Resources/views/TaskManage/modal.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/modal.html.twig
@@ -15,7 +15,7 @@
 {% block body %}
   <div class="task-manage-editor" id="task-manage-editor">
     <ul class="es-step es-step-3 clearfix" id="task-manage-step">
-        <li class="doing">
+        <li class="done">
           <span class="number">1</span>
           选择教学手段
         </li>
