--- a/src/Topxia/AdminBundle/Resources/views/Default/cloud-search-ranking.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/cloud-search-ranking.html.twig
@@ -3,9 +3,9 @@
 <table class="table table-condensed table-noborder table-overflow">
   <thead>
   <tr>
-    <th width="60%">{{ '关键词'|trans }}</th>
+    <th width="55%">{{ '关键词'|trans }}</th>
     <th width="30%">{{ '搜索次数'|trans }}</th>
-    <th></th>
+    <th width="15%"></th>
   </tr>
   </thead>
   <tbody>
