fix：直播活动的学习页面

--- a/src/WebBundle/Resources/views/LiveActivity/show.html.twig
+++ b/src/WebBundle/Resources/views/LiveActivity/show.html.twig
@@ -1,1 +1,7 @@
-show.html.twig
+{% extends 'TopxiaWebBundle::blank-layout.html.twig' %}
+
+
+{% block content %} 
+	<pre>{{activity.remark|raw}}</pre>
+  {#<script>app.load('activitybundle/controller/activity-manage/text-activity-fields')</script>#}
+{% endblock %}
