--- a/src/WebBundle/Resources/views/Task/show.html.twig
+++ b/src/WebBundle/Resources/views/Task/show.html.twig
@@ -14,7 +14,7 @@
       <a class="back-link" href="javascript:;">
         <i class="es-icon es-icon-chevronleft"></i>
       </a>
-      任务1 引用外站（优酷、土豆、网易公开课）的视频示例
+      当前任务：{{activity.title}} 
   </div>
   <div class="dashboard-content">
     <iframe id="task-content-iframe" class="task-content-iframe" src="{{path('course_task_activity_show',{id:task.id,courseId:task.courseId})}}" style="width:100%;height:100%;border:0px">
